--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -45,18 +45,17 @@
                     </li>
                 </ul>
             </nav>
-            <form action="{% url 'set_language' %}" method="post">
+            <form id="language-form" action="{% url 'set_language' %}" method="post" class="language-form">
                 {% csrf_token %}
                 <input name="next" type="hidden" value="{{ redirect_to }}">
-                <label>
-                    <input type="radio" name="language" value="ru" {% if LANGUAGE_CODE == 'ru' %}checked{% endif %}>
-                    Русский
-                </label><br>
-                <label>
-                    <input type="radio" name="language" value="en" {% if LANGUAGE_CODE == 'en' %}checked{% endif %}>
-                    English
-                </label><br>
-                <button type="submit">Выбрать</button>
+                <label class="language-label">
+                    <span class="language-label-text">RU</span>
+                    <input class="language-label-radio" type="radio" name="language" value="ru" {% if LANGUAGE_CODE == 'ru' %}checked{% endif %}>
+                </label>
+                <label class="language-label">
+                    <span class="language-label-text">EN</span>
+                    <input class="language-label-radio" type="radio" name="language" value="en" {% if LANGUAGE_CODE == 'en' %}checked{% endif %}>
+                </label>
             </form>
             <ul class="contacts">
                 <li class="contacts-item">
@@ -204,7 +203,7 @@
             </div>
         </section>
     </main>
-
+    <script src="{% static 'scripts/switch.js' %}"></script>
 </body>
 
 </html>
