--- a/Points_of_view/points/static/style/naive-questions.css
+++ b/Points_of_view/points/static/style/naive-questions.css
@@ -73,19 +73,19 @@ body {
 
 .header-container {
     display: flex;
-    padding: 30px 70px;
+    padding: 30px 55px;
     align-items: center;
     height: 130px;
 }
 
 .header-nav {
-    margin-right: 89px;
+    margin-right: 75px;
     margin-left: auto;
 }
 
 .header-nav-list {
     display: flex;
-    gap: 95px;
+    gap: 77px;
 }
 
 .header-nav-link {
@@ -102,6 +102,65 @@ body {
 
 .header-nav-link:active {
     color: #136856;
+}
+
+.language-form {
+    margin-right: 74px;
+    position: relative;
+    display: inline-flex;
+    gap: 2px;
+    border: 1px solid #BFBFBF;
+    border-radius: 15px;
+    width: 48px;
+    height: 26px;
+}
+
+.language-form,
+.language-label,
+.language-label-radio {
+    cursor: pointer;
+}
+
+.language-label {
+    position: relative;
+}
+
+.language-label-text {
+    position: absolute;
+    top: -12px;
+    left: 4px;
+    font-size: 8px;
+    color: #BFBFBF;
+    transition: color 0.3s ease;
+}
+
+.language-label.selected .language-label-text {
+    color: var(--black);
+}
+
+.language-label-radio {
+    opacity: 0; 
+    width: 22px;
+    height: 22px;
+    position: relative;
+    top: 1px;
+}
+
+.language-label-text::after {
+    content: '';
+    background-color: var(--green);
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 13px;
+    left: -4px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.language-label.selected .language-label-text::after {
+    opacity: 1;
 }
 
 .contacts {
