--- a/Points_of_view/points/templates/naive-questions.html
+++ b/Points_of_view/points/templates/naive-questions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load i18n %}
-<html lang="ru">
+<html lang="{{ language }}">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,11 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-                <img src="{% static 'img/logo-1.svg' %}" alt="logo">
+                {% if language == 'en' %}
+                    <img src="{% static 'img/logo-1-en.svg' %}" alt="logo">
+                {% else %}
+                    <img src="{% static 'img/logo-1.svg' %}" alt="logo">
+                {% endif %}
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
