--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -315,7 +315,7 @@
                     andrey.gunyavin@gmail.com
                 </li>
                 <li class="footer-contacts-item">
-                    pointsofview.ru
+                    points-of-view.ru
                 </li>
                 <li class="footer-contacts-item">тел.: 8 (916) 955-29-26</li>
                 <ul class="contacts footer-contacts">
