--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -26,6 +26,11 @@
                 {% endif %}
             </div>
             <nav class="header-nav">
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
                 <ul class="header-nav-list">
                     <li class="header-nav-item">
                         <a href="{% url 'index' %}" class="header-nav-link">
@@ -165,7 +170,7 @@
                     </svg>
                 </span>
                 {% translate 'твенного' %}
-                <span class="about-lab-description-big--rectangle">
+                <span class="about-lab-description-big--rectangle about-lab-description-big--rectangle-2">
                     <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="124" height="35" rx="17.5" fill="#799FCC" />
                     </svg>
