--- a/Points_of_view/points/static/style/art-diving.css
+++ b/Points_of_view/points/static/style/art-diving.css
@@ -57,13 +57,6 @@ body {
     margin: 0 auto;
 }
 
-.subtitle {
-    font-size: 50px;
-    font-weight: 900;
-    line-height: 62.5px;
-    text-transform: uppercase;
-}
-
 .header {
     position: sticky;
     top: 0;
@@ -73,25 +66,41 @@ body {
 
 .header-container {
     display: flex;
+    justify-content: space-between;
     padding: 30px 55px;
     align-items: center;
     height: 130px;
 }
 
 .header-nav {
-    margin-right: 75px;
-    margin-left: auto;
+    margin-right: 14%;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 24px;
+    height: 18px;
+}
+
+.burger div {
+    background-color: var(--black);
+    height: 3px;
+    width: 100%;
 }
 
 .header-nav-list {
     display: flex;
-    gap: 77px;
+    gap: 17%;
 }
 
 .header-nav-link {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+    white-space: nowrap;
     color: var(--black);
     transition: color 0.3s ease-in-out;
 }
@@ -105,8 +114,8 @@ body {
 }
 
 .language-form {
-    margin-right: 74px;
     position: relative;
+    right: -2%;
     display: inline-flex;
     gap: 2px;
     border: 1px solid #BFBFBF;
@@ -139,7 +148,7 @@ body {
 }
 
 .language-label-radio {
-    opacity: 0; 
+    opacity: 0;
     width: 22px;
     height: 22px;
     position: relative;
@@ -246,6 +255,13 @@ body {
 
 .about-project-inner-container {
     display: flex;
+}
+
+.subtitle {
+    font-size: 50px;
+    font-weight: 900;
+    line-height: 62.5px;
+    text-transform: uppercase;
 }
 
 .about-project-subtitle {
@@ -464,4 +480,360 @@ body {
     font-weight: 400;
     line-height: 23px;
     color: var(--grey);
+}
+
+@media screen and (max-width: 1249px) {
+    .burger {
+        display: flex;
+        position: relative;
+        left: 10px;
+        z-index: 20;
+    }
+
+    .line1,
+    .line2,
+    .line3 {
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .toggle .line1 {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .toggle .line2 {
+        opacity: 0;
+    }
+
+    .toggle .line3 {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    .header-nav-list {
+        display: none;
+    }
+
+    .header-nav-active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        z-index: 15;
+        top: 20px;
+        left: 0;
+        width: 100%;
+        gap: 30px;
+        padding: 30px 10px 50px;
+        background-color: var(--grey);
+    }
+
+    .header-nav-active li {
+        text-align: center;
+    }
+
+    .language-form {
+        right: 10px;
+    }
+
+    .footer-nav {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1070px) {
+    .container {
+        max-width: 700px;
+    }
+
+    .header-container {
+        height: 100px;
+        padding: 17px 0px;
+    }
+
+    .hero {
+        padding: 0;
+        background-position: right 0px bottom 46px;
+        background-size: 100%;
+    }
+
+    .hero-container {
+        width: 420px;
+        padding-top: 29px;
+        padding-bottom: 227px;
+    }
+
+    .hero-title {
+        margin-bottom: 24px;
+        font-size: 46px;
+        line-height: 60px;
+    }
+
+    .hero-text {
+        margin-bottom: 36px;
+        font-size: 18px;
+    }
+
+    .hero-btn {
+        padding: 10px 30px;
+        font-size: 14px;
+    }
+
+    .about-project-container {
+        padding: 0px 0px 12px;
+    }
+
+    .about-project-inner-container {
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .subtitle {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .about-project-subtitle {
+        margin-bottom: 40px;
+        padding-left: 24px;
+    }
+
+    .about-project-left {
+        margin: 0 auto;
+    }
+
+    .about-project-left-card {
+        min-height: 107px;
+        font-size: 23px;
+        line-height: 26px;
+    }
+
+    .about-project-right {
+        padding-left: 30px;
+    }
+
+    .about-project-right-subtitle {
+        font-size: 25px;
+        line-height: 31px;
+    }
+
+    .about-project-right-descr {
+        font-size: 17px;
+        line-height: 22px;
+    }
+
+    .about-project-2-container {
+        padding: 41px 30px 48px;
+    }
+
+    .about-project-2-subtitle {
+        margin-bottom: 44px;
+        font-size: 25px;
+        line-height: 28px;
+    }
+
+    .about-project-2-inner-container {
+        flex-direction: column;
+    }
+
+    .about-project-2-left {
+        margin-right: 0;
+        padding: 41px 31px;
+        margin-bottom: 29px;
+    }
+
+    .about-project-2-left-text {
+        font-size: 16px;
+        line-height: 21px;
+    }
+
+    .about-project-2-left-text:not(:last-child) {
+        margin-bottom: 21px;
+    }
+
+    .about-project-2-right-text {
+        padding: 29px 33px;
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .about-project-2-right-text:not(:last-child) {
+        margin-bottom: 29px;
+    }
+
+    .skills-container {
+        padding: 46px 24px 130px;
+    }
+
+    .skills-subtitle {
+        margin-bottom: 36px;
+    }
+    
+    .skills-list {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        max-width: 345px;
+    }
+
+    .header-container {
+        height: 62px;
+    }
+
+    .header-logo {
+        width: 68px;
+    }
+
+    .header-nav-active {
+        top: 5px;
+        padding: 50px 10px;
+    }
+
+    .header-nav-link {
+        font-size: 16px;
+    }
+
+    .contacts {
+        gap: 5px;
+    }
+
+    .contacts-item {
+        width: 30px;
+        height: 30px;
+    }
+
+    .contacts-item svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .hero-container {
+        width: 350px;
+        padding-top: 29px;
+        padding-bottom: 209px;
+        padding-right: 42px;
+    }
+
+    .hero-title {
+        margin-bottom: 24px;
+        font-size: 32px;
+        line-height: 45px;
+    }
+
+    .hero-text {
+        margin-bottom: 29px;
+        font-size: 16px;
+    }
+
+    .hero-btn {
+        padding: 4px 22px;
+        font-size: 14px;
+    }
+
+    .about-project-inner-container {
+        gap: 0;
+    }
+
+    .subtitle {
+        font-size: 28px;
+        line-height: 35px;
+    }
+
+    .about-project-subtitle {
+        margin-bottom: 23px;
+        padding-left: 24px;
+    }
+
+    .about-project-left {
+        margin-right: 0px;
+    }
+
+    .about-project-left-card {
+        min-height: 99px;
+        font-size: 18px;
+        line-height: 22.5px;
+    }
+
+    .about-project-right {
+        padding-top: 29px;
+        padding-left: 0;
+    }
+
+    .about-project-right-subtitle {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .about-project-right-descr {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .about-project-2-container {
+        padding: 23px 24px 26px;
+    }
+
+    .about-project-2-subtitle {
+        margin-bottom: 25px;
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+    .about-project-2-left {
+        padding: 24px 23px;
+        margin-bottom: 18px;
+    }
+
+    .about-project-2-left-text {
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .about-project-2-left-text:not(:last-child) {
+        margin-bottom: 18px;
+    }
+
+    .about-project-2-right-text {
+        padding: 29px 26px;
+        font-size: 14px;
+        line-height: 17.5px;
+    }
+
+    .about-project-2-right-text:not(:last-child) {
+        margin-bottom: 18px;
+    }
+
+    .skills-container {
+        padding: 29px 24px 90px;
+    }
+
+    .skills-subtitle {
+        margin-bottom: 23px;
+    }
+
+    .realization-container {
+        padding: 25px 23px 50px;
+    }
+
+    .realization-subtitle {
+        margin-bottom: 23px;
+    }
+
+    .realization-card {
+        height: 396px;
+    }
+
+    .relization-name {
+        top: 306px;
+        left: 25px;
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    .realization-role {
+        top: 333px;
+        left: 25px;
+        font-size: 12px;
+        line-height: 23px;
+    }
 }
