--- a/Points_of_view/points/static/style/naive-questions.css
+++ b/Points_of_view/points/static/style/naive-questions.css
@@ -57,13 +57,6 @@ body {
     margin: 0 auto;
 }
 
-.subtitle {
-    font-size: 50px;
-    font-weight: 900;
-    line-height: 62.5px;
-    text-transform: uppercase;
-}
-
 .header {
     position: sticky;
     top: 0;
@@ -74,24 +67,41 @@ body {
 .header-container {
     display: flex;
     padding: 30px 55px;
+    justify-content: space-between;
     align-items: center;
     height: 130px;
 }
 
 .header-nav {
     margin-right: 75px;
-    margin-left: auto;
+    margin-right: 14%;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 24px;
+    height: 18px;
+}
+
+.burger div {
+    background-color: var(--black);
+    height: 3px;
+    width: 100%;
 }
 
 .header-nav-list {
     display: flex;
-    gap: 77px;
+    gap: 17%;
 }
 
 .header-nav-link {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+    white-space: nowrap;
     color: var(--black);
     transition: color 0.3s ease-in-out;
 }
@@ -105,8 +115,8 @@ body {
 }
 
 .language-form {
-    margin-right: 74px;
     position: relative;
+    right: -2%;
     display: inline-flex;
     gap: 2px;
     border: 1px solid #BFBFBF;
@@ -139,7 +149,7 @@ body {
 }
 
 .language-label-radio {
-    opacity: 0; 
+    opacity: 0;
     width: 22px;
     height: 22px;
     position: relative;
@@ -242,6 +252,13 @@ body {
     padding-right: 25px;
 }
 
+.subtitle {
+    font-size: 50px;
+    font-weight: 900;
+    line-height: 62.5px;
+    text-transform: uppercase;
+}
+
 .about-project-subtitle {
     color: var(--black);
     margin-bottom: 25px;
@@ -318,7 +335,7 @@ body {
 .skills-list {
     display: flex;
     justify-content: center;
-    gap: 55px;
+    gap: 34px;
 }
 
 .skills-item {
@@ -378,6 +395,7 @@ body {
 
 .realization-wrap {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 32px;
 }
@@ -387,6 +405,7 @@ body {
     height: 550px;
     border-radius: 30px;
     position: relative;
+    border-radius: 30px;
 }
 
 .relization-name {
@@ -407,4 +426,297 @@ body {
     font-weight: 400;
     line-height: 23px;
     color: var(--grey);
+}
+
+@media screen and (max-width: 1249px) {
+    .burger {
+        display: flex;
+        position: relative;
+        left: 10px;
+        z-index: 20;
+    }
+
+    .line1,
+    .line2,
+    .line3 {
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .toggle .line1 {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .toggle .line2 {
+        opacity: 0;
+    }
+
+    .toggle .line3 {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    .header-nav-list {
+        display: none;
+    }
+
+    .header-nav-active {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        z-index: 15;
+        top: 20px;
+        left: 0;
+        width: 100%;
+        gap: 30px;
+        padding: 30px 10px 50px;
+        background-color: var(--grey);
+    }
+
+    .header-nav-active li {
+        text-align: center;
+    }
+
+    .language-form {
+        right: 10px;
+    }
+
+    .footer-nav {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1070px) {
+    .container {
+        max-width: 700px;
+    }
+
+    .header-container {
+        height: 100px;
+        padding: 17px 0px;
+    }
+
+    .hero {
+        padding: 0;
+        background-position: right 0px bottom 46px;
+        background-size: 100%;
+    }
+
+    .hero-container {
+        width: 420px;
+        padding-top: 29px;
+        padding-bottom: 227px;
+    }
+
+    .hero-title {
+        margin-bottom: 24px;
+        font-size: 46px;
+        line-height: 60px;
+    }
+
+    .hero-text {
+        margin-bottom: 36px;
+        font-size: 18px;
+    }
+
+    .hero-btn {
+        padding: 10px 30px;
+        font-size: 14px;
+    }
+
+    
+    .about-project-container {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .subtitle {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .about-project-wrap {
+        flex-direction: column-reverse;
+        margin-bottom: 60px;
+    }
+
+    .about-project-inner-wrapper {
+        margin-left: 0;
+        margin-bottom: 25px;
+        padding-top: 3px;
+    }
+
+    .about-project-descr-big {
+        font-size: 21px;
+        line-height: 31px;
+    }
+
+    .about-project-descr-small {
+        font-size: 17px;
+        line-height: 22px;
+    }
+
+    .about-project-2-container {
+        padding: 50px 100px 100px 45px;
+        background-image: none;
+    }   
+
+    .about-project-2-descr-big {
+        margin-bottom: 46px;
+        font-size: 36px;
+        line-height: 45px;
+    }
+
+    .skills-container {
+        padding: 46px 24px 130px;
+    }
+
+    .skills-subtitle {
+        margin-bottom: 36px;
+    }
+
+    .skills-list {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        max-width: 345px;
+    }
+
+    .header-container {
+        height: 62px;
+    }
+
+    .header-logo {
+        width: 68px;
+    }
+
+    .header-nav-active {
+        top: 5px;
+        padding: 50px 10px;
+    }
+
+    .header-nav-link {
+        font-size: 16px;
+    }
+
+    .contacts {
+        gap: 5px;
+    }
+
+    .contacts-item {
+        width: 30px;
+        height: 30px;
+    }
+
+    .contacts-item svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .hero {
+        margin-bottom: 0;
+    }
+
+    .hero-container {
+        width: 350px;
+        padding-top: 29px;
+        padding-bottom: 222px;
+        padding-right: 42px;
+    }
+
+    .hero-title {
+        margin-bottom: 24px;
+        font-size: 32px;
+        line-height: 45px;
+    }
+
+    .hero-text {
+        margin-bottom: 29px;
+        font-size: 16px;
+    }
+
+    .hero-btn {
+        padding: 4px 22px;
+        font-size: 14px;
+    }
+
+    .subtitle {
+        font-size: 28px;
+        line-height: 35px;
+    }
+
+    .about-project-subtitle {
+        margin-bottom: 22px;
+        padding-left: 24px;
+    }
+
+    .about-project-wrap {
+        padding: 23px;
+        margin-bottom: 20px;
+    }
+
+    .about-project-descr-big {
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+    .about-project-descr-small {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .about-project-descr-small:not(:last-child) {
+        margin-bottom: 22px;
+    }
+
+    .about-project-2-container {
+        padding: 24px 24px 53px 25px;
+        
+    }
+
+    .about-project-2-descr-big {
+        margin-bottom: 31px;
+        font-size: 24px;
+        line-height: 30px;
+    }
+
+    .about-project-2-descr-small {
+        font-size: 12px;
+        line-height: 15px;
+    }
+
+    .skills-container {
+        padding: 29px 24px 90px;
+    }
+
+    .skills-subtitle {
+        margin-bottom: 23px;
+    }
+
+    .realization-container {
+        padding: 25px 23px 50px;
+    }
+
+    .realization-subtitle {
+        margin-bottom: 23px;
+    }
+
+    .realization-card {
+        height: 396px;
+    }
+
+    .relization-name {
+        top: 306px;
+        left: 25px;
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    .realization-role {
+        top: 333px;
+        left: 25px;
+        font-size: 12px;
+        line-height: 23px;
+    }
 }
