--- a/Points_of_view/points/templates/portfolio.html
+++ b/Points_of_view/points/templates/portfolio.html
@@ -26,6 +26,11 @@
                 {% endif %}
             </div>
             <nav class="header-nav">
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
                 <ul class="header-nav-list">
                     <li class="header-nav-item">
                         <a href="{% url 'index' %}" class="header-nav-link">
