fixed the scrolling

--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -118,13 +118,32 @@
                 <p class="hero-text">
                     {% translate 'Университеты не там где диктуют, но там где дискутируют' %}.
                 </p>
-                <button class="hero-btn" onclick="window.scrollTo({
-                    top: 660,
-                    left: 0,
-                    behavior: 'smooth'
-                    })">
+                <button class="hero-btn" id="heroBtn">
                     {% translate 'Подробнее' %}
                 </button>
+                <script>
+                    let scrollHeight;
+
+                    function resizeScrollHeight() {
+                        if (window.innerWidth < 600) {
+                            scrollHeight = 500;
+                        } else if (window.innerWidth < 1070) {
+                            scrollHeight = 560;
+                        } else {
+                            scrollHeight = 690;
+                        }
+                    };
+
+                    resizeScrollHeight();
+
+                    heroBtn.onclick = function() {
+                        window.scrollTo({
+                            top: scrollHeight,
+                            left: 0,
+                            behavior: 'smooth'
+                        })
+                    };
+                </script>
             </div>
         </section>
 
