--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -114,13 +114,32 @@
                 <p class="hero-text">
                     {% translate 'Арт-лаборатория, открывающая искусство по-новому' %}.
                 </p>
-                <button class="hero-btn" onclick="window.scrollTo({
-                    top: 660,
-                    left: 0,
-                    behavior: 'smooth'
-                    })">
+                <button class="hero-btn" id="heroBtn">
                     {% translate 'Подробнее' %}
                 </button>
+                <script>
+                    let scrollHeight;
+
+                    function resizeScrollHeight() {
+                        if (window.innerWidth < 600) {
+                            scrollHeight = 470;
+                        } else if (window.innerWidth < 1070) {
+                            scrollHeight = 520;
+                        } else {
+                            scrollHeight = 700;
+                        }
+                    };
+
+                    resizeScrollHeight();
+
+                    heroBtn.onclick = function() {
+                        window.scrollTo({
+                        top: scrollHeight,
+                        left: 0,
+                        behavior: 'smooth'
+                    })
+                    };
+                </script>
             </div>
         </section>
 
