--- a/Points_of_view/points/templates/art-diving.html
+++ b/Points_of_view/points/templates/art-diving.html
@@ -113,13 +113,32 @@
                 <p class="hero-text">
                     {% translate 'Прочувствуй художественное произведение' %}.
                 </p>
-                <button class="hero-btn" onclick="window.scrollTo({
-                    top: 720,
-                    left: 0,
-                    behavior: 'smooth'
-                    })">
+                <button class="hero-btn" id="heroBtn">
                     {% translate 'Подробнее' %}
                 </button>
+                <script>
+                    let scrollHeight;
+
+                    function resizeScrollHeight() {
+                        if (window.innerWidth < 600) {
+                            scrollHeight = 430;
+                        } else if (window.innerWidth < 1070) {
+                            scrollHeight = 510;
+                        } else {
+                            scrollHeight = 740;
+                        }
+                    };
+
+                    resizeScrollHeight();
+
+                    heroBtn.onclick = function() {
+                        window.scrollTo({
+                            top: scrollHeight,
+                            left: 0,
+                            behavior: 'smooth'
+                        })
+                    };
+                </script>
             </div>
         </section>
 
